force-app/main/default/objects/Create_Batch__c/Create_Batch__c.object-meta.xml
<CustomObject>
    <label>Batch</label>
    <nameField>
        <displayFormat>NRDC-{0000}</displayFormat>
        <label>Batch ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>