force-app/main/default/objects/Create_Batch__c/fields/Batch_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Batch_Created_Date__c</fullName>
    <label>Batch Created Date</label>
    <type>DateTime</type>
</CustomField>