force-app/main/default/objects/Create_Batch__c/fields/Batch_Dispatch_Date__c.field-meta.xml
<CustomField>
    <fullName>Batch_Dispatch_Date__c</fullName>
    <label>Batch Dispatch Date</label>
    <type>DateTime</type>
</CustomField>