force-app/main/default/objects/Create_Batch__c/fields/E_Way_Bill_No__c.field-meta.xml
<CustomField>
    <fullName>E_Way_Bill_No__c</fullName>
    <label>E-Way Bill No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>