force-app/main/default/objects/Create_Batch__c/fields/Handover_Person_Store__c.field-meta.xml
<CustomField>
    <fullName>Handover_Person_Store__c</fullName>
    <label>Handover Person/Store</label>
    <length>255</length>
    <type>Text</type>
</CustomField>