force-app/main/default/objects/Create_Batch__c/fields/Is_Credit_Note_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Credit_Note_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Credit Note Created</label>
    <type>Checkbox</type>
</CustomField>