force-app/main/default/objects/Create_Batch__c/fields/Is_GRN_Received__c.field-meta.xml
<CustomField>
    <fullName>Is_GRN_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is GRN Received</label>
    <type>Checkbox</type>
</CustomField>