force-app/main/default/objects/Create_Batch__c/fields/isShipped__c.field-meta.xml
<CustomField>
    <fullName>isShipped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isShipped</label>
    <type>Checkbox</type>
</CustomField>