force-app/main/default/objects/Create_Batch__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>Contact__r.Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contact&apos;s Location</inlineHelpText>
    <label>Location</label>
    <type>Text</type>
</CustomField>