force-app/main/default/objects/Create_Batch__c/fields/LR_Attachment__c.field-meta.xml
<CustomField>
    <fullName>LR_Attachment__c</fullName>
    <label>LR Attachment</label>
    <type>Url</type>
</CustomField>