force-app/main/default/objects/Create_Batch__c/fields/LR_Number__c.field-meta.xml
<CustomField>
    <fullName>LR_Number__c</fullName>
    <label>LR Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>