force-app/main/default/objects/Create_Batch__c/fields/Name_and_Adress_of_Consignee__c.field-meta.xml
<CustomField>
    <fullName>Name_and_Adress_of_Consignee__c</fullName>
    <formula>CASE(
    Address_of_Consignee__c,
    &quot;River HQ&quot;,
    $CustomMetadata.Bill_To_Addresse__mdt.River_HQ.River_Bill_To_Address__c &amp; BR() &amp;
    $CustomMetadata.Bill_To_Addresse__mdt.River_HQ.River_billToadress2__c &amp; BR() &amp;
    $CustomMetadata.Bill_To_Addresse__mdt.River_HQ.River_billToAddress3__c &amp; BR() &amp;
    $CustomMetadata.Bill_To_Addresse__mdt.River_HQ.Pincode__c,
    
    &quot;River Factory&quot;,
    $CustomMetadata.Bill_To_Addresse__mdt.River_Factory.River_Bill_To_Address__c &amp; BR() &amp;
    $CustomMetadata.Bill_To_Addresse__mdt.River_Factory.River_billToadress2__c &amp; BR() &amp;
    $CustomMetadata.Bill_To_Addresse__mdt.River_Factory.River_billToAddress3__c &amp; BR() &amp;
    $CustomMetadata.Bill_To_Addresse__mdt.River_Factory.Pincode__c,
    
    &quot;No Address&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name and Adress of Consignee</label>
    <type>Text</type>
</CustomField>