force-app/main/default/objects/Create_Batch__c/fields/River_GST__c.field-meta.xml
<CustomField>
    <fullName>River_GST__c</fullName>
    <formula>CASE(
Address_of_Consignee__c,
&quot;River HQ&quot;,
$CustomMetadata.Bill_To_Addresse__mdt.River_HQ.GST__c,
&quot;River Factory&quot;,
$CustomMetadata.Bill_To_Addresse__mdt.River_Factory.GST__c,
&quot;No Address&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>River GST</label>
    <type>Text</type>
</CustomField>