force-app/main/default/objects/Create_Batch__c/fields/Send_to_Finance__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Finance</label>
    <type>Checkbox</type>
</CustomField>