force-app/main/default/objects/Create_Batch__c/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <formula>CASE(
Address_of_Consignee__c,
&quot;River HQ&quot;,
 $CustomMetadata.Bill_To_Addresse__mdt.River_HQ.State_Code__c,
&quot;River Factory&quot;,
$CustomMetadata.Bill_To_Addresse__mdt.River_Factory.State_Code__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State Code</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>