force-app/main/default/objects/Create_Batch__c/fields/Terms_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Terms_of_Delivery__c</fullName>
    <label>Terms of Delivery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>