force-app/main/default/objects/Create_Batch__c/fields/Transport_Name__c.field-meta.xml
<CustomField>
    <fullName>Transport_Name__c</fullName>
    <label>Transport Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>