force-app/main/default/objects/Create_Batch__c/fields/Transporter_ID__c.field-meta.xml
<CustomField>
    <fullName>Transporter_ID__c</fullName>
    <label>Transporter ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>