force-app/main/default/objects/Create_Batch__c/fields/Vehicle_No__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_No__c</fullName>
    <label>Vehicle No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>