force-app/main/default/objects/Create_Batch__c/validationRules/Future_Batch_Dispatch_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Future_Batch_Dispatch_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        AND(
            ISPICKVAL(PRIORVALUE(Status__c), &apos;Ready for Dispatch&apos;),
            ISPICKVAL(Status__c, &apos;Dispatched&apos;)
        ),
        AND(
            ISPICKVAL(PRIORVALUE(Status__c), &apos;Dispatched&apos;),
            ISPICKVAL(Status__c, &apos;Ready for Dispatch&apos;)
        )
    ),
    NOT(ISBLANK(Batch_Dispatch_Date__c)),
    DATEVALUE(Batch_Dispatch_Date__c) != TODAY()
)</errorConditionFormula>
    <errorDisplayField>Batch_Dispatch_Date__c</errorDisplayField>
    <errorMessage>Update Batch Dispatch Date to current date.</errorMessage>
</ValidationRule>