force-app/main/default/objects/Create_Batch__c/validationRules/Status_Changes_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Changes_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
         
        ISPICKVAL(Status__c, &apos;Dispatched&apos;),
        ISPICKVAL(Status__c, &apos;Received&apos;)
    ),
    ISCHANGED(Status__c),
    OR(
        ISBLANK(Batch_Dispatch_Date__c),
        ISBLANK(Vehicle_No__c),
        ISBLANK(E_Way_Bill_No__c),
        ISBLANK(Transporter_ID__c),
        ISBLANK(Transport_Name__c),
        ISBLANK(LR_Attachment__c),
        ISBLANK(LR_Number__c),
        ISBLANK(River_GST__c),
        ISPICKVAL(Mode_of_Transport__c, &apos;&apos;)
    )
)</errorConditionFormula>
    <errorMessage>Before moving to Readdy for Dispatche, you must have to enter all Shipping Details</errorMessage>
</ValidationRule>