force-app/main/default/objects/Create_Batch__c/validationRules/Transition_to_next_stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Transition_to_next_stage</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISCHANGED(Status__c),
    OR(
        AND(
            ISPICKVAL(PRIORVALUE(Status__c), &apos;New&apos;),
            NOT(ISPICKVAL(Status__c, &apos;Dispatched&apos;))
        ),
        AND(
            ISPICKVAL(PRIORVALUE(Status__c), &apos;Dispatched&apos;),
            NOT(ISPICKVAL(Status__c, &apos;Received&apos;))
        ),
        AND(
            ISPICKVAL(PRIORVALUE(Status__c), &apos;Received&apos;),
            NOT(ISPICKVAL(Status__c, &apos;Dispatched&apos;))
        )
    )
)</errorConditionFormula>
    <errorMessage>status moves only in sequence</errorMessage>
</ValidationRule>