force-app/main/default/objects/Create_Batch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Batch_Created_Date__c</columns>
    <columns>Batch_Amount__c</columns>
    <columns>Batch_Dispatch_Date__c</columns>
    <columns>LR_Number__c</columns>
    <columns>LR_Attachment__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Batches</label>
</ListView>