force-app/main/default/objects/Create_Batch__c/listViews/Today_s_Batch.listView-meta.xml
<ListView>
    <fullName>Today_s_Batch</fullName>
    <columns>NAME</columns>
    <columns>Batch_Amount__c</columns>
    <columns>Batch_Created_Date__c</columns>
    <columns>Batch_Dispatch_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Batch_Created_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Batch</label>
</ListView>